Modified Abe to be used with Quarkcoin

--- a/abe.conf
+++ b/abe.conf
@@ -31,7 +31,7 @@
 
 # MySQL example; see also README-MYSQL.txt:
 #dbtype MySQLdb
-#connect-args {"user":"root","db":"abe"}
+#connect-args {"user":"abe","db":"abe","passwd":"xxxx"}
 
 # SQLite3 example:
 #dbtype = sqlite3
@@ -55,7 +55,7 @@
 #connect-args {"dsn":"DATABASE=abe;UID=db2inst1;PWD=B!tCo1N","conn_options":{"102":0}}
 
 # Specify port and/or host to serve HTTP instead of FastCGI:
-#port 2750
+#port 1234
 #host localhost
 
 # Specify no-serve to exit immediately after importing block files:
@@ -63,7 +63,7 @@
 
 # "upgrade" tells Abe to upgrade database objects automatically after
 # code updates:
-#upgrade
+upgrade
 #
 # Sometimes upgrades fail and leave the database unusable.  Sometimes
 # upgrades take several minutes or longer.  You may get an idea of the
@@ -111,11 +111,11 @@
 # someday, several bytes) preceding the public key hash before base-58
 # conversion.  Example:
 #
-#datadir += [{
-#        "dirname": "/home/weeds/testnet",
-#        "chain":   "Weeds",
-#        "code3":   "WDS",
-#        "address_version": "\u00f3" }]
+datadir += [{
+        "dirname": "/home/USER/.quarkcoin",
+        "chain":   "Quarkcoin",
+        "code3":   "QRK",
+        "address_version": "\u003a" }]
 #datadir += [{
 #        "dirname":"/home/namecoin/.namecoin/testnet",
 #        "chain":"NCTestnet",
@@ -139,7 +139,7 @@
 #
 # The binary-type setting affects only the first run, where Abe
 # creates its tables.
-#binary-type hex
+binary-type binary
 
 # Some databases have trouble with the large integers that Abe uses
 # for statistics.  Setting int-type=str causes Abe to pass certain
@@ -166,46 +166,51 @@
 #download-name = abe
 
 # Primitive template system until I separate view from controller.
-#template_vars += {
-#    "CONTENT_TYPE": "text/html; charset=utf-8",
-#    "APPNAME": "Abe",
-#    "DONATIONS_BTC": "1PWC7PNHL1SgvZaN7xEtygenKjWobWsCuf",
-#    "DONATIONS_NMC": "NJ3MSELK1cWnqUa6xhF2wUYAnz3RSrWXcK"
-#}
-#template_vars += { "DONATIONS_BTC": "1YourBitcoinAddressHere" }
-#template_vars += { "HOMEPAGE": "chain/Bitcoin" }
-#template = "
-#<!DOCTYPE html>
-#<html lang=\"en\">
-#<head>
-#    <link rel=\"stylesheet\" type=\"text/css\"
-#     href=\"%(dotdot)s%(STATIC_PATH)sabe.css\" />
-#    <link rel=\"shortcut icon\" href=\"%(dotdot)s%(STATIC_PATH)sfavicon.ico\" />
-#    <title>%(title)s</title>
-#</head>
-#<body>
-#    <h1><a href=\"%(dotdot)s%(HOMEPAGE)s\"><img
-#     src=\"%(dotdot)s%(STATIC_PATH)slogo32.png\" alt=\"Abe logo\" /></a> %(h1)s
-#    </h1>
-#    %(body)s
-#    <p style=\"font-size: smaller\">
-#        <span style=\"font-style: italic\">
-#            Powered by <a href=\"%(ABE_URL)s\">%(APPNAME)s</a>
-#        </span>
-#        Tips appreciated!
-#        <a href=\"%(dotdot)saddress/%(DONATIONS_BTC)s\">BTC</a>
-#        <a href=\"%(dotdot)saddress/%(DONATIONS_NMC)s\">NMC</a>
-#    </p>
-#</body>
-#</html>
-#"
+template_vars += {
+    "CONTENT_TYPE": "text/html; charset=utf-8",
+    "APPNAME": "Abe",
+    "DONATIONS_BTC": "1PWC7PNHL1SgvZaN7xEtygenKjWobWsCuf",
+    "DONATIONS_NMC": "NJ3MSELK1cWnqUa6xhF2wUYAnz3RSrWXcK"
+}
+template_vars += { "DONATIONS_BTC": "QhSQH5RPG4Us3UQ7Y9dwybbSaSP1V9YQbm" }
+template_vars += { "DONATIONS_NMC": "1YvFRbKSKFardMW1ixZyaRozvCwBZ8VrG" }
+template_vars += { "HOMEPAGE": "chain/Quarkcoin" }
+template = "
+<!DOCTYPE html>
+<html lang=\"en\">
+<head>
+    <link rel=\"stylesheet\" type=\"text/css\"
+     href=\"%(dotdot)s%(STATIC_PATH)sabe.css\" />
+    <link rel=\"shortcut icon\" href=\"%(dotdot)s%(STATIC_PATH)sfavicon.ico\" />
+    <title>%(title)s</title>
+</head>
+<body>
+    <h1><a href=\"%(dotdot)s%(HOMEPAGE)s\"><img
+     src=\"%(dotdot)s%(STATIC_PATH)slogo32.png\" class=\"logoimg\" style=\"vertical-align: middle;\" alt=\"Quarkcoin logo\" /></a> %(h1)s
+    </h1>
+    %(body)s
+    <p style=\"font-size: smaller\">
+        <span style=\"font-style: italic\">
+            Quarkcoin Explorer powered by <a href=\"%(ABE_URL)s\">%(APPNAME)s</a>
+        </span><br />
+        Tips appreciated!
+        <a href=\"%(dotdot)saddress/%(DONATIONS_BTC)s\">BTC</a>
+        <a href=\"%(dotdot)saddress/%(DONATIONS_NMC)s\">QRK</a>
+    </p>
+    <p style=\"font-size: smaller\">
+        <a href=\"%(dotdot)s%(STATIC_PATH)ssource.zip\">APGL Source</a>
+    </p>
+</body>
+</html>
+"
+
 
 # Save blocks to the database after reading this many bytes from a
 # file.  Abe may run faster with a higher value, for example 10000,
 # while loading lots of data with a single process.  Non-zero values
 # can lead to errors when two processes load transaction data
 # simultaneously.
-#commit-bytes = 0
+commit-bytes = 10000
 
 # "rescan" causes Abe to search all block files for new blocks.  This
 # can take several minutes on a large chain, longer if many of the
